After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661179 - touchpad toggle icons don't show up
touchpad toggle icons don't show up
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-07 13:17 UTC by Matthias Clasen
Modified: 2011-10-07 13:34 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2011-10-07 13:17:41 UTC
When I hit Fn-F8, I get an empty OSK...
Comment 1 Bastien Nocera 2011-10-07 13:34:26 UTC
commit e8324c83654d3c50f8c142a2c12f421e61f8da9f
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Oct 7 14:27:53 2011 +0100

    media-keys: Fix OSD touchpad icon names
    
    https://bugzilla.gnome.org/show_bug.cgi?id=661179