media-keys: Fix OSD touchpad icon names

https://bugzilla.gnome.org/show_bug.cgi?id=661179